# Robotics_Competition_Inmind

./: Dockerfile  Dockerfile.base
src/behavior_tree/: behavior_tree.cpp
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: gripper_action_client.hpp
src/control/src/: gripper_action_client.cpp
src/navigation/include/navigation/: Qr_navigation_node.hpp  can_navigation_node.hpp
src/navigation/src/: Qr_navigation_node.cpp  can_navigation_node.cpp
src/perception/: package.xml  setup.py
src/perception/launch/: perception_launch.py
src/perception/perception/: pepsican_detector.py  qrcode_detector.py
